# symbolic-accompaniment-transformer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TRAINING_GUIDE.md  app.py  conftest.py  docker-compose.yaml  pyproject.toml  results.txt
analysis/: architectural_tradeoffs_report.md  audio_rendering_strategy.md  band_sound_implementation_guide.md  branch_design_changes.md  comprehensive_review.md  demo_pipeline_report.md  differentiation_analysis.md  efficiency_bottleneck_report.md  evaluation_metrics_strategy.md  performance_optimization.md  post_training_verification.md  pretraining_sanity_check.md  project_plan.md  report.md  structural_limitations.md
analysis/archive/: directory_reorganization.md  future_improvements.md  logical_bugs.md  offline_pitch_augmentation.md  offline_preprocessing_optimization.md
checkpoints/: .gitkeep
configs/: config.yaml  sweep_example.yaml  wandb_sweep.yaml
data/inspect/: 001_full.mid  051_full.mid  201_full.mid  401_full.mid  701_full.mid
data/processed/: .gitkeep
data/raw/: .gitkeep
docker/: Dockerfile  docker-entrypoint.sh
inspection/: .gitkeep
logs/: .gitkeep
notebooks/: colab_download_slakh_redux.ipynb  colab_smoke_test.ipynb  colab_train_verify.ipynb
output/: .gitkeep
presentation/: 01_introduction.md  02_representation.md  03_architecture.md  04_training_loss.md  05_evaluation.md  06_conclusion.md
scripts/: compare_inference.py  controllability_sweep.py  download_lakh.py  download_pop909.py  download_slakh.py  inference.py  inspect_data.py  package_assets.py  package_for_server.py  prepare_data.py  sweep.py  train.py
scripts/analysis/: compare_inference.py  controllability_sweep.py  diagnose_melody_agreement.py  export_melody_comparison.py  inspect_data.py  melody_method_stats.py  sweep.py
scripts/tools/: download_slakh.py  package_assets.py  package_for_server.py
server/: 00_bringup.sh  05_inspect_data.sh  10_dry_run.sh  20_train.sh  21_resume.sh  30_sweep.sh  31_setup_demo.sh  90_fetch_artifacts.sh  README.md  _common.sh  read_config.py  upload_bundle.sh  watch_and_fetch.sh
soundfonts/: .gitkeep
src/jam_transformer/: __init__.py  audio.py  config.py  dataset.py  lightning_module.py  logger.py  midi_io.py  model.py  overrides.py  pipeline.py  tokenizer.py  train_components.py  utils.py
src/jam_transformer/preprocessing/: __init__.py  chords.py  lakh.py  melody.py  pop909.py  shards.py  slakh.py  synthetic.py
src/jam_transformer/utils/: __init__.py  audio.py  logger.py  overrides.py
tests/: conftest.py  test_basics.py  test_dynamics.py  test_integration.py
