[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jam_transformer"
version = "0.1.0"
description = "Symbolic vocal-melody → accompaniment Transformer."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "miditoolkit>=1.0.0",
    "pretty_midi>=0.2.10",
    "numpy",
    "pyyaml",
    "tqdm",
    "loguru",
    "python-dotenv",
]

[project.optional-dependencies]
train = [
    "pytorch-lightning>=2.2",  # LightningModule, Trainer, callbacks
    "wandb",                   # experiment tracking (optional but recommended)
]
dev = [
    "pytest",
    "pytest-timeout",   # @pytest.mark.timeout used in test_dynamics.py
    "zstandard",        # package_for_server.py --compress zst (default)
]
render = [
    "pyfluidsynth",       # optional MIDI → WAV at inference time
    "scipy",
    "pedalboard",         # DSP effects chain (reverb, compressor, limiter)
    "soundfile",          # audio I/O for pedalboard
]
audio = [
    "basic-pitch",        # audio (WAV/MP3) → MIDI transcription at inference time
    "sounddevice",        # microphone recording (--mic_input)
    "scipy",              # WAV file write for mic recording
    "noisereduce",        # spectral noise reduction (--denoise)
]
demo = [
    "gradio>=4.0",        # web demo (app.py)
    "librosa",            # BPM auto-detection in loop station mode
]

[tool.setuptools.packages.find]
where = ["src"]
